--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="publisher" content="Nelson  Muñoz">
     <meta name="keywords" content="Portafolio Nelson Muñoz, Nelson Muñoz, Nelson, Muñoz, Portafolios, Portafolio">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="">
+    <link rel="canonical" href="https://portafolio-sigma-blue.vercel.app/#inicio">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="icon" type="image/x-icon" href="logo-web.png">
+    <link rel="icon" type="image/x-icon" href="logo-web.webp">
     
     <script src="https://kit.fontawesome.com/992a29f92d.js" crossorigin="anonymous"></script>
-</head>
+</head> 
 <body>
 
     <header>
@@ -132,7 +132,7 @@
                             <span>C#</span>
                         </div>
                         <div class="contenedor-acciones">
-                            <a href="https://github.com/Ginto11/GestionUniversidad-Back" target="_blank"><i class="fa-brands fa-github"></i> Ver Codigo</a>
+                            <a href="https://github.com/Ginto11/GestionUniversidad-Back" target="_blank" title="Ver Repositorio"><i class="fa-brands fa-github"></i> Ver Codigo</a>
                         </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                             <span>Node JS</span>
                         </div>
                         <div class="contenedor-acciones">
-                            <a href="https://github.com/Ginto11/GestionUniversidad-Front" target="_blank"><i class="fa-brands fa-github"></i> Ver codigo</a>
-                            <a href="https://gestion-universidad.vercel.app" target="_blank"><i class="fa-solid fa-link"></i> Ver despliegue</a>
+                            <a href="https://github.com/Ginto11/GestionUniversidad-Front" target="_blank" title="Ver Repositorio"><i class="fa-brands fa-github"></i> Ver codigo</a>
+                            <a href="https://gestion-universidad.vercel.app" target="_blank" title="Ver Version de Producción"><i class="fa-solid fa-link"></i> Ver despliegue</a>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                             <span>Javascript</span>
                         </div>
                         <div class="contenedor-acciones">
-                            <a href="https://colors-indol.vercel.app/" target="_blank"><i class="fa-brands fa-github"></i> Ver Codigo</a>
+                            <a href="https://colors-indol.vercel.app/" target="_blank" title="Ver Repositorio"><i class="fa-brands fa-github"></i> Ver Codigo</a>
                         </div>
                     </div>
                 </div>
@@ -176,27 +176,27 @@
                     <h3>Back-End</h3>
                     <ul>
                         <li>
-                            <img src="assets/icons/net-logo.svg" alt="">
+                            <img src="assets/icons/net-logo.svg" alt="Logo .NET" title=".NET">
                             <span>.NET CORE</span>
                         </li>
                         <li>
-                            <img src="assets/icons/cshart-logo.svg" alt="">
+                            <img src="assets/icons/cshart-logo.svg" alt="Logo C#" title="C#">
                             <span>C#</span>
                         </li>
                         <li>
-                            <img src="assets/icons/node-logo.svg" alt="">
+                            <img src="assets/icons/node-logo.svg" alt="Logo NodeJS" title="Node Js">
                             <span>Node JS</span>
                         </li>
                         <li>
-                            <img src="assets/icons/java-logo.svg" alt="">
+                            <img src="assets/icons/java-logo.svg" alt="Logo Java" title="Java">
                             <span>Java</span>
                         </li>
                         <li>
-                            <img src="assets/icons/mssql-logo.svg" alt="">
+                            <img src="assets/icons/mssql-logo.svg" alt="Logo Sql Server" title="Sql Server">
                             <span>Sql Server</span>
                         </li>
                         <li>
-                            <img src="assets/icons/postgres-logo.svg" alt="">
+                            <img src="assets/icons/postgres-logo.svg" alt="Logo PostgreSQL" title="PostgreSQL">
                             <span>PostgreSQL</span>
                         </li>
                     </ul>
@@ -205,23 +205,23 @@
                     <h3>Front-Ent</h3>
                     <ul>
                         <li>
-                            <img src="assets/icons/angular-logo.svg" alt="">
+                            <img src="assets/icons/angular-logo.svg" alt="Logo Angular" title="Angular">
                             <span>Angular</span>
                         </li>
                         <li>
-                            <img src="assets/icons/javascript-logo.svg" alt="">
+                            <img src="assets/icons/javascript-logo.svg" alt="Logo JavaScript" title="JavaScript">
                             <span>Javascript</span>
                         </li>
                         <li>
-                            <img src="assets/icons/typescript-logo.svg" alt="">
-                            <span>Typescript</span>
+                            <img src="assets/icons/typescript-logo.svg" alt="Logo TypeScript" title="TypeScript">
+                            <span>TypeScript</span>
                         </li>
                         <li>
-                            <img src="assets/icons/html-logo.svg" alt="">
+                            <img src="assets/icons/html-logo.svg" alt="Logo Html 5" title="HTML 5">
                             <span>HTML 5</span>
                         </li>
                         <li>
-                            <img src="assets/icons/css-logo.svg" alt="">
+                            <img src="assets/icons/css-logo.svg" alt="Logo Css 3" title="CSS 3">
                             <span>CSS 3</span>
                         </li>
                     </ul>
@@ -230,27 +230,27 @@
                     <h3>Herramientas</h3>
                     <ul>
                         <li>
-                            <img src="assets/icons/git-logo.svg" alt="">
+                            <img src="assets/icons/git-logo.svg" alt="Logo Git" title="Git">
                             <span>Git</span>
                         </li>
                         <li>
-                            <img src="assets/icons/github-logo.svg" alt="">
+                            <img src="assets/icons/github-logo.svg" alt="Logo GitHub" title="GitHub">
                             <span>GitHub</span>
                         </li>
                         <li>
-                            <img src="assets/icons/insomnia-logo.svg" alt="">
+                            <img src="assets/icons/insomnia-logo.svg" alt="Logo Insomnia" title="Insomnia">
                             <span>Insomnia</span>
                         </li>
                         <li>
-                            <img src="assets/icons/npm-logo.svg" alt="">
+                            <img src="assets/icons/npm-logo.svg" alt="Logo NPM" title="NPM">
                             <span>NPM</span>
                         </li>
                         <li>
-                            <img src="assets/icons/vs-logo.svg" alt="">
+                            <img src="assets/icons/vs-logo.svg" alt="Logo Visual Studio" title="Visual Studio">
                             <span>Visual Studio</span>
                         </li>
                         <li>
-                            <img src="assets/icons/vsc-logo.svg" alt="">
+                            <img src="assets/icons/vsc-logo.svg" alt="Logo Visual Studio Code" title="Visual Studio Code">
                             <span>Visual Studio Code</span>
                         </li>
                     </ul>
