Añadiendo verificacion Google Search Console

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://portafolio-sigma-blue.vercel.app/#inicio">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="icon" type="image/x-icon" href="logo-web.webp">
-    
+    <meta name="google-site-verification" content="WhQNLZ79fbMl9W8r5XEX_2gAOBPUWHAca-WNpuG3vrM" />
     <script src="https://kit.fontawesome.com/992a29f92d.js" crossorigin="anonymous"></script>
 </head> 
 <body>
